add new page to exposition

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                             Exposition
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="ucad.html">ucad</a></li>
-                            <li><a class="dropdown-item" href="#">Subitem 2</a></li>
-                            <li><a class="dropdown-item" href="#">Subitem 3</a></li>
+                            <li><a class="dropdown-item" href="rennaissance.html">Rennaissance</a></li>
+                            <li><a class="dropdown-item" href="delivrance.html">Delivrance</a></li>
+                            <li><a class="dropdown-item" href="affirmation.html">Affirmation</a></li>
+                            <li><a class="dropdown-item" href="oula.html">Oula</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -51,6 +52,20 @@
             <img src="./images/delivrance/delivrance1.jpg" alt="Responsive Image" class="img-fluid">
         </a>
         <h5 id="image-title">Delivrance 2016, Genéve, Suisse</h5>
+    </div>
+
+    <div class="container image-container">
+        <a href="./affirmation.html" id="image-link">
+            <img src="./images/Affirmation/arbre-colore.jpg" alt="Responsive Image" class="img-fluid">
+        </a>
+        <h5 id="image-title">Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm</h5>
+    </div>
+
+    <div class="container image-container">
+        <a href="./oula.html" id="image-link">
+            <img src="./images/Sculptures/oula/A_chacun-son-assise.jpg" alt="Responsive Image" class="img-fluid w-100 h-auto">
+        </a>
+        <h5 id="image-title"> chacun son assise - 2017- métal et peinture - Installation sculpturale de 455cm de hauteur, installée à la NEF au Noirmont</h5>
     </div>
 
 
