adding listener of scroll and style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="center-title"><a href="index.html">Ousmane Dia</a></h1>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <h1 class="center-title visible"><a href="index.html">Ousmane Dia</a></h1>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light py-2 hidden" id="navbar">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
