create new page pouvoir des mains wip navbar

--- a/pouvoirDes-mains.html
+++ b/pouvoirDes-mains.html
@@ -45,61 +45,64 @@
         </nav>
     </div>
     <div class="container my-5">
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="image-container">
-                    <img src="./images/Affirmation/automutilation1.jpg" class="img-fluid " alt="Délivrance 1 - 2016 - métal - 200cm x 70cm x 50cm">
-                    <h6>Délivrance 1 - 2016 - métal - 200cm x 70cm x 50cm</h6>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="image-container">
-                    <img src="./images/Affirmation/automutilation2.jpg" class="img-fluid" alt="Délivrance 2 - 2016 - métal - 150cm x 120cm x 35cm">
-                    <h6>Délivrance 2 - 2016 - métal - 150cm x 120cm x 35cm/h6>
-                </div>
-            </div>
-        </div>
+        
 
         <div class="container image-container">
-            <img src="./images/Affirmation/valse-de-migrants.jpg" class="img-fluid" alt="Valse des migrants - 2015 - métal - 230cm x 190cm x 70cm">
-                <h6>Valse des migrants - 2015 - métal - 230cm x 190cm x 70cm</h6>
+            <div class="embed-responsive embed-responsive-16by9">
+                <video class="embed-responsive-item" width="100%" controls>
+                    <source src="images/HUG/Videos/Le_pouvoir_des_mains.mp4" type="video/mp4">
+                    Votre navigateur ne prend pas en charge la vidéo.
+                </video>
+            </div>
+            <h6>Ousmane Dia le pouvoir des mains</h6>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/trone.jpg" class="img-fluid" alt="Trône - 2015 - métal - 250cm x 80cm x 60cm">
-                <h6>Trône - 2015 - métal - 250cm x 80cm x 60cm</h6>
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" class="img-fluid" alt="Trône - 2015 - métal - 250cm x 80cm x 60cm">
+                <h6>Pouvoir des mains HUG</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/mouvement.jpg" class="img-fluid" alt="DMouvement - 2012 - métal - 240cm x 70cm x 30cm">
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" class="img-fluid" alt="DMouvement - 2012 - métal - 240cm x 70cm x 30cm">
                 <h6> Mouvement - 2012 - métal - 240cm x 70cm x 30cm</h6>
             </div>
         </div>
 
         <div class="container image-container">
-            <img src="./images/Affirmation/arbre-colore.jpg" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
-            <h6>Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm</h6>
+            <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
+            <h6></h6>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/arbre.jpg" class="img-fluid" alt="Arbre - 2015 - métal - 170cm x 65cm x 20cm">
-                <h6>Arbre - 2015 - métal - 170cm x 65cm x 20cm</h6>
+                <img src="./images/HUG/Images/empreintes.jpg" class="img-fluid" alt="Arbre - 2015 - métal - 170cm x 65cm x 20cm">
+                <h6>empreintes</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/why.jpg" class="img-fluid" alt="WHY? - 2015 - 240cm x 95cm x 25cm">
-                <h6>WHY? - 2015 - 240cm x 95cm x 25cm</h6>
+                <img src="./images/HUG/Images/archive.jpg" class="img-fluid" alt="WHY? - 2015 - 240cm x 95cm x 25cm">
+                <h6>archive</h6>
             </div>
         </div>
 
+        <div class="container image-container">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video class="embed-responsive-item" width="100%" controls>
+                    <source src="images/HUG/Videos/HUG_3mai_2018.mp4" type="video/mp4">
+                    Votre navigateur ne prend pas en charge la vidéo.
+                </video>
+            </div>
+            <h6>HUG Mai 2018</h6>
+        </div>
+
+
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/ascension.jpg" class="img-fluid" alt="Ascension - 2016 - métal - 65cm x 25cm x 20cm">
-                <h6>Ascension - 2016 - métal - 65cm x 25cm x 20cm</h6>
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" class="img-fluid" alt="Ascension - 2016 - métal - 65cm x 25cm x 20cm">
+                <h6></h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/Affirmation/barometre.jpg" class="img-fluid" alt="Baromètre présidentiel - 2056 - métal - 200cm x 40cm x 30cm">
-                <h6>Baromètre présidentiel - 2016 - métal - 200cm x 40cm x 30cm</h6>
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" class="img-fluid" alt="Baromètre présidentiel - 2056 - métal - 200cm x 40cm x 30cm">
+                <h6></h6>
             </div>
         </div>
 
