adding lightbox librairy

--- a/oula.html
+++ b/oula.html
@@ -18,15 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Exposition
-                        </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="./rennaissance.html">Rennaissance</a></li>
                             <li><a class="dropdown-item" href="./delivrance.html">Delivrance</a></li>
-                            <li><a class="dropdown-item" href="oula.html">Oula</a></li>
-                            <li><a class="dropdown-item" href="pouvoirDes-mains.html">Pouvoir des mains</a></li>
-                            <li><a class="dropdown-item" href="affirmation.html">Affirmation</a></li>
+                            <li><a class="dropdown-item" href="./oula.html">Oula</a></li>
+                            <li><a class="dropdown-item" href="./pouvoirDes-mains.html">Pouvoir des mains</a></li>
+                            <li><a class="dropdown-item" href="./affirmation.html">Affirmation</a></li>
 
 
                         </ul>
