--- a/pouvoirDes-mains.html
+++ b/pouvoirDes-mains.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="./lightbox2-2.11.4/src/css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <title>Ousmane_Dia/affirmation</title>
+    
 </head>
 <body>
     <div class="container ">
@@ -59,28 +61,38 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" class="img-fluid" alt="Trône - 2015 - métal - 250cm x 80cm x 60cm">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
+                </a>
                 <h6>Pouvoir des mains HUG</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" class="img-fluid" alt="DMouvement - 2012 - métal - 240cm x 70cm x 30cm">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" class="img-fluid" alt="Mouvement - 2012 - métal - 240cm x 70cm x 30cm">
+                </a>
                 <h6> Mouvement - 2012 - métal - 240cm x 70cm x 30cm</h6>
             </div>
         </div>
 
         <div class="container image-container">
-            <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
-            <h6></h6>
+            <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" data-lightbox="gallery1">
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" data-lightbox="gallery1" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
+
+            </a>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/empreintes.jpg" class="img-fluid" alt="Arbre - 2015 - métal - 170cm x 65cm x 20cm">
-                <h6>empreintes</h6>
+                <a href="./images/HUG/Images/empreintes.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/empreintes.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
+                </a>
+                <h6>Empreintes</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/archive.jpg" class="img-fluid" alt="WHY? - 2015 - 240cm x 95cm x 25cm">
-                <h6>archive</h6>
+                <a href="./images/HUG/Images/archive.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/archive.jpg" class="img-fluid" alt="">
+                </a>
+                <h6> Archive </h6>
             </div>
         </div>
 
@@ -97,11 +109,15 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" class="img-fluid" alt="Ascension - 2016 - métal - 65cm x 25cm x 20cm">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
+                </a>
                 <h6></h6>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" class="img-fluid" alt="Baromètre présidentiel - 2056 - métal - 200cm x 40cm x 30cm">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" data-lightbox="gallery1">
+                    <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" class="img-fluid" alt="">
+                </a>
                 <h6></h6>
             </div>
         </div>
@@ -113,9 +129,12 @@
     <footer class="bg-light text-light py-5">
         <p> © Ousmane Dia,2023 Allrights reserved</p>
          </div>
-     </footer>    
+    </footer>    
     
-    <script src="script.js"></script>
+ 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./lightbox2-2.11.4/src/js/lightbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
