wip adding new pages on exposition moramora maturite and resource navbar with profile and press

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
                                 <li><a class="dropdown-item" href="affirmation.html">Affirmation</a></li>
                                 <li><a class="dropdown-item" href="oula.html">Oula</a></li>
                                 <li><a class="dropdown-item" href="pouvoirDes-mains.html">Pouvoir Des Mains</a></li>
+                                <li><a class="dropdown-item" href="mora.html">Galerie Moramora</a></li>
+                                <li><a class="dropdown-item" href="maturite.html">Maturité</a></li>
+
+
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="ressource.html">Ressource</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
@@ -82,6 +86,21 @@
             <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" alt="Responsive Image" class="img-fluid">
         </a>
         <h5 id="image-title"> Le pouvoir des mains HUG 2018</h5>
+    </div>
+
+    <div class="container image-container">
+        <a href="./mora.html" id="image-link">
+            <img src="./images/moramora/Initiation.jpg" alt="Responsive Image" class="img-fluid">
+        </a>
+        <h5 id="image-title">Galerie Moramora, Avril 2019, Genéve</h5>
+    </div>
+
+
+    <div class="container image-container">
+        <a href="./maturite.html" id="image-link">
+            <img src="./images/Sculptures/Monument/IMG_0868.jpg" alt="Responsive Image" class="img-fluid w-100 h-auto">
+        </a>
+        <h5 id="image-title">Maturité de mon peuple, Sénégal Dakar(Janv-Fev) 2018</h5>
     </div>
 
 
