--- a/pouvoirDes-mains.html
+++ b/pouvoirDes-mains.html
@@ -61,13 +61,13 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_11.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
                 </a>
                 <h6>Pouvoir des mains HUG</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_10.jpg" class="img-fluid" alt="Mouvement - 2012 - métal - 240cm x 70cm x 30cm">
                 </a>
                 <h6> Mouvement - 2012 - métal - 240cm x 70cm x 30cm</h6>
@@ -76,20 +76,20 @@
 
         <div class="container image-container">
             <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" data-lightbox="gallery1">
-                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" data-lightbox="gallery1" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
+                <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_12.jpg" data-lightbox="pouvoir-des-mains" class="img-fluid" alt="Arbre à Palabre - 2015 - méal + peinture - 100cm x 65cm x 60cm">
 
             </a>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/empreintes.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/empreintes.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/empreintes.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
                 </a>
                 <h6>Empreintes</h6>
             </div>
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/archive.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/archive.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/archive.jpg" class="img-fluid" alt="">
                 </a>
                 <h6> Archive </h6>
@@ -109,13 +109,13 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_8.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
                 </a>
                 <h6></h6>
             </div>
             <div class="col-md-6 mb-4">
-                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" data-lightbox="gallery1">
+                <a href="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" data-lightbox="pouvoir-des-mains">
                     <img src="./images/HUG/Images/Le_pouvoir_des_mains_HUG_9.jpg" class="img-fluid" alt="">
                 </a>
                 <h6></h6>
