--- a/rennaissance.html
+++ b/rennaissance.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="./lightbox2-2.11.4/src/css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <title>Ousmane_Dia</title>
 </head>
@@ -42,47 +43,71 @@
     </div>
     <div class="container my-5">
         <div class="container image-container">
-            <img src="./images/rennaissance/putch.jpg" class="img-fluid" alt="...">
-                <h6>Putch - 2012 - métal - 380cm x 190cm x 70cm</h6>
+            <a href="./images/rennaissance/putch.jpg" data-lightbox="rennaissance">
+                <img src="./images/rennaissance/putch.jpg" class="img-fluid" alt="Pouvoir des mains HUG">
+            </a>
+            <h6 class="image-title"> Putch - 2012 - métal - 380cm x 190cm x 70cm</h6>
         </div>
         <div class="row">
             <div class="col-md-6 mb-4">
-                <div class="image-container">
-                    <img src="./images/rennaissance/bras_long.jpg" class="img-fluid image" alt="Bras long - 2015 - métal - 65cm x 15cm x 15cm">
+                <div class="container image-container">
+                    <a href="./images/rennaissance/bras_long.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/bras_long.jpg" class="img-fluid" alt="Bras long - 2015 - métal - 65cm x 15cm x 15cm">
+                    </a>
                     <h6 class="image-title">Bras long - 2015 - métal - 65cm x 15cm x 15cm</h6>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
-                <div class="image-container">
-                    <img src="./images/rennaissance/hommage.jpg" class="img-fluid image" alt="Pouvoir du peuple, hommage au Burkina Faso - 2015 - Métal - 160cm x 40cm x 30cm">
+                <div class="container image-container">
+                    <a href="./images/rennaissance/hommage.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/hommage.jpg" class="img-fluid" alt="Pouvoir du peuple, hommage au Burkina Faso - 2015 - Métal - 160cm x 40cm x 30cm">
+                    </a>
                     <h6 class="image-title">Pouvoir du peuple, hommage au Burkina Faso - 2015<br>Métal - 160cm x 40cm x 30cm</h6>
                 </div>
             </div>
         </div>
         <div class="container image-container">
-            <img src="./images/rennaissance/dialogue-sourds.jpg" class="img-fluid" alt="Dialogue de sourds">
-                <h6>Dialogue de sourds - 2015 - métal - 75cm x 70cm x 15cm</h6>
+            <a href="./images/rennaissance/dialogue-sourds.jpg" data-lightbox="rennaissance">
+                <img src="./images/rennaissance/dialogue-sourds.jpg" class="img-fluid" alt="Dialogue de sourds - 2015 - métal - 75cm x 70cm x 15cm">
+            </a>
+            <h6 class="image-title"> Dialogue de sourds - 2015 - métal - 75cm x 70cm x 15cm</h6>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/rennaissance/detruisez-pas-planete.jpg" class="img-fluid" alt="Ne détruisez pas ma planète">
-                <h6>Ne détruisez pas ma planète - 2015 - métal - 75cm x 25cm x 20cm</h6>
+                <div class="container image-container">
+                    <a href="./images/rennaissance/detruisez-pas-planete.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/detruisez-pas-planete.jpg" class="img-fluid" alt="Ne détruisez pas ma planète - 2015 - métal - 75cm x 25cm x 20cm">
+                    </a>
+                    <h6 class="image-title">Ne détruisez pas ma planète - 2015 - métal - 75cm x 25cm x 20cm</h6>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/rennaissance/jaillessement.jpg" class="img-fluid" alt="Jaillissement">
-                <h6> Jaillissement - métal - 2015 - 120cm x 50cm x 30cm </h6>
+                <div class="container image-container">
+                    <a href="./images/rennaissance/jaillessement.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/jaillessement.jpg" class="img-fluid" alt="Jaillissement - métal - 2015 - 120cm x 50cm x 30cm">
+                    </a>
+                    <h6 class="image-title">Jaillissement - métal - 2015 - 120cm x 50cm x 30cm</h6>
+                </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="./images/rennaissance/pouvoir_opposition.jpg" class="img-fluid" alt="Pouvoir et opposition">
-                <h6>Pouvoir et opposition - 2012 - métal - 285cm x 55cm x 35cm</h6>
+                <div class="container image-container">
+                    <a href="./images/rennaissance/Ligne.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/Ligne.jpg" class="img-fluid" alt="Ligne - 2012 - métal - 215cm x 20cm x 20cm">
+                    </a>
+                    <h6 class="image-title">Ligne - 2012 - métal - 215cm x 20cm x 20cm</h6>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="./images/rennaissance/Ligne.jpg" class="img-fluid image" alt="Ligne - 2012 - métal - 215cm x 20cm x 20cm">
-                <h6 class="image-title">Ligne - 2012 - métal - 215cm x 20cm x 20cm</h6>
+                <div class="container image-container">
+                    <a href="./images/rennaissance/pouvoir_opposition.jpg" data-lightbox="rennaissance">
+                        <img src="./images/rennaissance/pouvoir_opposition.jpg" class="img-fluid" alt="Pouvoir et opposition - 2012 - métal - 285cm x 55cm x 35cm">
+                    </a>
+                    <h6 class="image-title">Pouvoir et opposition - 2012 - métal - 285cm x 55cm x 35cm</h6>
+                </div>
             </div>
         </div>
     </div>
@@ -93,6 +118,8 @@
          </div>
      </footer>    
     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./lightbox2-2.11.4/src/js/lightbox.js"></script>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
