wip adding new page from ressource texte

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Exposition
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu ml-auto flex-column " aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="rennaissance.html">Rennaissance</a></li>
                                 <li><a class="dropdown-item" href="delivrance.html">Delivrance</a></li>
                                 <li><a class="dropdown-item" href="affirmation.html">Affirmation</a></li>
