--- a/ressource.html
+++ b/ressource.html
@@ -43,6 +43,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="ressource.html">Profil</a></li>
+                                <li><a class="dropdown-item" href="textes.html">Textes</a></li>
                                 <li><a class="dropdown-item" href="press.html">Press</a></li>
                             </ul>
                         </li>
@@ -71,45 +72,47 @@
     <div class="container">
         <div class="d-flex align-items-center">
             <div class="container image-container">
-                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="ODia">
+                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="trone">
                     <img src="./images/page-sculpture/The-RED-THRONE-1.jpg"  class="img-fluid " alt="Photo profils Ousmane Dia">
                 </a>
-                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="ODia">
+                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="trone">
                     <img src="./images/page-sculpture/The-RED-THRONE-1.jpg"  class="img-fluid " alt="Photo profils Ousmane Dia">
                 </a>
-                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="ODia">
+                <a href="./images/page-sculpture/The-RED-THRONE-1.jpg" data-lightbox="trone">
                     <img src="./images/page-sculpture/The-RED-THRONE-1.jpg"  class="img-fluid " alt="Photo profils Ousmane Dia">
                 </a>
             </div>
     
             <div>
-                <h1>Ousmane DIA</h1>
+                <h1>Ousmane DIA,</h1>
+                <br> <br>
+                
                 <p class="profiltext">
-                Artiste plasticien sénégalais et suisse, enseignant d’arts visuels, Ousmane DIA vit et travaille à Genève depuis plus de 22 ans. Diplômé de l’Ecole Nationale des Beaux-Arts de Dakar, il complète ses études avec un Post-grade en sculpture à l’Ecole Supérieure d'Arts Visuels de Genève et obtient son diplôme en 2001.<br>
+                Artiste plasticien sénégalais et suisse, enseignant d’arts visuels, Ousmane DIA vit et travaille à Genève depuis plus de 22 ans. Diplômé de l’Ecole Nationale des Beaux-Arts de Dakar, il complète ses études avec un Post-grade en sculpture à l’Ecole Supérieure d'Arts Visuels de Genève et obtient son diplôme en 2001.<br> <br>
 
-                Une chaise. Une autre chaise ! Une chaise encore ? Et puis une autre et deux autres et dix autres. Une ribambelle de chaises, des grandes, des petites, des verticales, des horizontales, isolées ou empilée en colonnes rectilignes ou dont la courbe défie l’équilibre.<br>
+                Une chaise. Une autre chaise ! Une chaise encore ? Et puis une autre et deux autres et dix autres. Une ribambelle de chaises, des grandes, des petites, des verticales, des horizontales, isolées ou empilée en colonnes rectilignes ou dont la courbe défie l’équilibre.<br> <br>
 
-                L’artiste Ousmane DIA a choisi le symbole de ce palliatif à la fatigue de la station debout, pour en faire une espèce de totem favori qui, en deux ou en trois dimensions, parsème son œuvre de manière récurrente sinon permanente.<br>
+                L’artiste Ousmane DIA a choisi le symbole de ce palliatif à la fatigue de la station debout, pour en faire une espèce de totem favori qui, en deux ou en trois dimensions, parsème son œuvre de manière récurrente sinon permanente.<br> <br>
 
-                L’artiste, en pleine maturité, pousse très loin la métaphore à propos de cet objet de notre quotidien, dont la banalité nous fait oublier les enchainements d’idées qu’il peut susciter. <br>
+                L’artiste, en pleine maturité, pousse très loin la métaphore à propos de cet objet de notre quotidien, dont la banalité nous fait oublier les enchainements d’idées qu’il peut susciter. <br> <br>
 
-                D’un homme épanoui, tant moralement que matériellement, on dira qu’il est assis, et bien assis, la chaise, c’est aussi le trône, le lieu de prédilection de celui qui commande, qui donne des ordres et qui se fait respecter. La position debout peut se révéler à la longue fatigante ; la position couchée rend trop vulnérable et ne donne pas une belle image de soi dans l’abandon qu’elle suggère.<br>
+                D’un homme épanoui, tant moralement que matériellement, on dira qu’il est assis, et bien assis, la chaise, c’est aussi le trône, le lieu de prédilection de celui qui commande, qui donne des ordres et qui se fait respecter. La position debout peut se révéler à la longue fatigante ; la position couchée rend trop vulnérable et ne donne pas une belle image de soi dans l’abandon qu’elle suggère.<br> <br>
 
-                Adroit intermédiaire, la position assise est celle qui tout à la fois repose et qui prépare à l’action, à l’intervention rapide. Parce qu’elle permet l’aisance, elle est plus confortable que la position debout qui est celle de ceux qui reçoivent des ordres et parce qu’elle autorise la domination, tant psychologique que physique, elle surplombe ceux qui sont prosternés ou couchés.<br>
+                Adroit intermédiaire, la position assise est celle qui tout à la fois repose et qui prépare à l’action, à l’intervention rapide. Parce qu’elle permet l’aisance, elle est plus confortable que la position debout qui est celle de ceux qui reçoivent des ordres et parce qu’elle autorise la domination, tant psychologique que physique, elle surplombe ceux qui sont prosternés ou couchés.<br> <br>
 
-                Parce qu’elle repose de la fatigue, la chaise est aussi celle qui accueille, qui sauve, l’être épuisé par sa course contre le temps et contre la vie ; elle est symbole de bienvenue, d’ouverture, de rencontre et de partage.<br>
+                Parce qu’elle repose de la fatigue, la chaise est aussi celle qui accueille, qui sauve, l’être épuisé par sa course contre le temps et contre la vie ; elle est symbole de bienvenue, d’ouverture, de rencontre et de partage.<br> <br>
 
-                En trois dimensions, la chaise est immédiatement perceptible comme telle et l’artiste en a fait la grande thématique de son œuvre que l’on retrouve sur plusieurs espaces publics dans ses deux pays. Mais on la retrouve également sous une forme moins immédiatement perceptible dans les toiles –trop rares- que produit également Ousmane DIA et dont quelques beaux exemplaires sont ici soumis à notre appréciation. <br>
+                En trois dimensions, la chaise est immédiatement perceptible comme telle et l’artiste en a fait la grande thématique de son œuvre que l’on retrouve sur plusieurs espaces publics dans ses deux pays. Mais on la retrouve également sous une forme moins immédiatement perceptible dans les toiles –trop rares- que produit également Ousmane DIA et dont quelques beaux exemplaires sont ici soumis à notre appréciation. <br> <br>
 
-                Dès 1999, Ousmane DIA participe à de nombreuses expositions individuelles et collectives en Suisse, au Sénégal, en France et aux Etats-Unis notamment. <br>
+                Dès 1999, Ousmane DIA participe à de nombreuses expositions individuelles et collectives en Suisse, au Sénégal, en France et aux Etats-Unis notamment. <br> <br>
 
-                Les œuvres d’Ousmane DIA interpellent par leur relative facilité d’approche et pourtant…l’harmonie et l’équilibre subissant l’assaut du temps et de la rouille avec une telle maîtrise ne doit pas faire oublier au public que le point de rupture si proche n’est improbable que par la volonté de l’artiste.<br>
+                Les œuvres d’Ousmane DIA interpellent par leur relative facilité d’approche et pourtant…l’harmonie et l’équilibre subissant l’assaut du temps et de la rouille avec une telle maîtrise ne doit pas faire oublier au public que le point de rupture si proche n’est improbable que par la volonté de l’artiste.<br> <br>
 
-                Les œuvres d'Ousmane DIA prennent racine dans le vécu et font souvent écho à l’actualité.<br>
+                Les œuvres d'Ousmane DIA prennent racine dans le vécu et font souvent écho à l’actualité.<br> <br>
 
-                Ousmane travaille la chaise, inlassablement, méticuleusement la même. Dans ses oeuvres, la chaise est devenue omniprésente. D’abord une recherche formelle elle devient obsessionnelle. Elle est la palette de l’artiste.<br>
+                Ousmane travaille la chaise, inlassablement, méticuleusement la même. Dans ses oeuvres, la chaise est devenue omniprésente. D’abord une recherche formelle elle devient obsessionnelle. Elle est la palette de l’artiste.<br> <br>
 
-                Dans les dernières oeuvres d'Ousmane DIA, la chaise prend ses aises. Elle tourbillonne, elle danse, elle témoigne, elle affirme.<br>
+                Dans les dernières oeuvres d'Ousmane DIA, la chaise prend ses aises. Elle tourbillonne, elle danse, elle témoigne, elle affirme.<br> <br>
                 </p>
             </div>
         </div>
