--- a/press.html
+++ b/press.html
@@ -82,9 +82,7 @@
                     <h4 class="title">Le Soleil </h4>
                     <p class="date"> Date:  01 Fevrier 2018</p>
                     <div class="details">
-                        <a href="./images/Sculptures/maturite/Presse_maturite/Le-Soleil-1-fev-18.jpg" data-lightbox="soleil">
                             <img src="./images/Sculptures/maturite/Presse_maturite/Le-Soleil-1-fev-18.jpg" class="img-fluid" alt="">
-                        </a>
                     </div>
                 </div>
             </li>
@@ -95,9 +93,7 @@
                     <h4 class="title">Magazine le Reflet </h4>
                     <p class="date"> Date:  Decembre 2017</p>
                     <div class="details">
-                        <a href="./images/Sculptures/maturite/Presse_maturite/Reflets.jpg" data-lightbox="Reflet">
                             <img src="./images/Sculptures/maturite/Presse_maturite/Reflets.jpg" class="img-fluid" alt="">
-                        </a>
                     </div>
                 </div>
             </li>
@@ -108,9 +104,8 @@
                     <h4 class="title"> PressAfrik </h4>
                     <p class="date"> Date: Janvier 2018</p>
                     <div class="details">
-                        <a href="./images/Sculptures/maturite/Presse_maturite/pressAfrik.jpg" data-lightbox="PressAfrik">
                             <img src="./images/Sculptures/maturite/Presse_maturite/pressAfrik.jpg" class="img-fluid" alt="">
-                        </a>
+                        
                         <a href="https://www.pressafrik.com/Maturite-Ousmane-Dia-chante-la-democratie-a-travers-365-sculptures_a176402.html" target="_blank">
                             <button class="btn btn-primary">See more...</button>
                         </a>                    
@@ -125,9 +120,7 @@
                     <h4 class="title">Grand Air </h4>
                     <p class="date"> Date:  22 Fevrier 2018</p>
                     <div class="details">
-                        <a href="./images/Sculptures/maturite/Presse_maturite/grand-air_Lesoleil.jpg" data-lightbox="grandAir">
                             <img src="./images/Sculptures/maturite/Presse_maturite/grand-air_Lesoleil.jpg" class="img-fluid" alt="">
-                        </a>
                     </div>
                 </div>
             </li>
@@ -138,9 +131,7 @@
                     <h4 class="title">Region </h4>
                     <p class="date"> Date:  26 Aout 2013</p>
                     <div class="details">
-                        <a href="./images/Presse/Hebdo1.jpg" data-lightbox="hebdo">
                             <img src="./images/Presse/Hebdo1.jpg" class="img-fluid" alt="">
-                        </a>
                     </div>
                 </div>
             </li>
@@ -152,9 +143,7 @@
                     <h4 class="title">Le Soleil </h4>
                     <p class="date"> Date:  06 Fevrier 2015</p>
                     <div class="details">
-                        <a href="./images/Presse/Lesoleil.jpg" data-lightbox="lesoleil">
                             <img src="./images/Presse/Lesoleil.jpg" class="img-fluid" alt="">
-                        </a>
                     </div>
                 </div>
             </li>
@@ -166,9 +155,8 @@
                     <h4 class="title">©Dakar </h4>
                     <p class="date"> Date:  15 Aout 2010</p>
                     <div class="details">
-                        <a href="./images/Presse/cdakar.jpg" data-lightbox="cdakar">
                             <img src="./images/Presse/cdakar.jpg" class="img-fluid" alt="">
-                        </a>
+                        
                     </div>
                 </div>
             </li>
@@ -180,7 +168,7 @@
                     <h4 class="title">Sud Quotidient </h4>
                     <p class="date"> Date:  10 mars 2015</p>
                     <div class="details">
-                        <a href="./images/Presse/SudQuotidien.jpg" data-lightbox="sudQoutidient">
+                        <a href="./images/Presse/SudQuotidien.jpg" idient">
                             <img src="./images/Presse/SudQuotidien.jpg" class="img-fluid" alt="">
                         </a>
                     </div>
@@ -193,7 +181,7 @@
                     <h4 class="title">Ouest-France </h4>
                     <p class="date"> Date:  19 juin 2015</p>
                     <div class="details">
-                        <a href="./images/Presse/OuestFrance.jpg" data-lightbox="Ouest-France">
+                        <a href="./images/Presse/OuestFrance.jpg" rance">
                             <img src="./images/Presse/OuestFrance.jpg" class="img-fluid" alt="">
                         </a>
                     </div>
@@ -206,7 +194,7 @@
                     <h4 class="title">le Soleil </h4>
                     <p class="date"> Date:  13 Avril 2015</p>
                     <div class="details">
-                        <a href="./images/Presse/SudquotidienNYC.jpg" data-lightbox="sudQoutidient">
+                        <a href="./images/Presse/SudquotidienNYC.jpg" idient">
                             <img src="./images/Presse/SudquotidienNYC.jpg" class="img-fluid" alt="">
                         </a>
 
