--- a/press.html
+++ b/press.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="./lightbox2-2.11.4/src/css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
-    <title>Ousmane_Dia</title>
+    <title>Ousmane_Dia/press</title>
 </head>
 <body>
     <div class="container">
